# papr-old

./: .gitignore  Cargo.toml  README.md  papr.sublime-syntax
paaipr/: Cargo.toml  train.py
paaipr/papr-tokenizer/: Cargo.toml
paaipr/papr-tokenizer/src/: main.rs
paaipr/src/: main.rs
papr-proc-macro/: Cargo.toml
papr-proc-macro/src/: lib.rs
papr_plugin/: Cargo.toml
papr_plugin/src/: lib.rs  main.rs
src/: app.rs  graph.rs  lib.rs  main.rs
src/dsp/: basic.rs  filters.rs  generators.rs  graph_util.rs  midi.rs  mod.rs  oversampling.rs  samplers.rs  time.rs
src/io/: midi.rs  mod.rs  osc.rs
src/parser/: builtins.rs  mod.rs
src/parser2/: builtins.rs  mod.rs
src/parser3/: builtins.rs  mod.rs  papr.pest  tests.rs
test-scripts/: delay.papr  env.papr  envs.papr  fm.papr  manual_fm.papr  midi.papr  mockup.pals  mockup.papr  oscs.papr  sawosc.papr  syntax2.papr  tape.papr  test1.papr  test2.papr  test3.papr  test4.papr  test5.papr  time.papr
test-scripts/logicsim/: logicsim.papr
test-scripts/old/: delay.papr  midi.papr  test5.papr
