[package]
name = "papr"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["papr-proc-macro"]


[features]
default = ["double"]
double = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
papr-proc-macro = { path = "./papr-proc-macro" }
cfg-if = "1.0.0"
clap = { version = "4.3.19", features = ["derive"] }
cpal = { version = "0.15.2", features = ["jack"] }
derive_more = "0.99.17"
eframe = "0.21"
env_logger = "0.10.0"
log = "0.4.19"
nom = "7.1.3"
petgraph = "0.6.3"
tokio = { version = "1.29.1", features = ["full"] }
rosc = "0.10.1"
midly = "0.5.3"
midir = "0.9.1"
crossbeam-channel = "0.5.8"
lazy_static = "1.4.0"
spin = { version = "0.9.8", features = ["std"] }
rfd = { version = "0.11.4", default-features = false, features = [
    "xdg-portal",
] }
syntect = { version = "5.1.0", features = ["default-fancy"] }
creak = "0.3.0"

[profile.release]
# debug = true
