[package]
name = "paaipr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
dfdx = { version = "0.13.0", features = ["nightly", "cuda", "safetensors"] }
lazy_static = "1.4.0"
nalgebra = { version = "0.32.3", features = ["rand_distr"] }
papr = { path = "../" }
petgraph = { version = "0.6.3", features = ["serde"] }
rand = "0.8.5"
rand_distr = "0.4.3"
rv = { version = "0.16.0", features = ["nalgebra"] }
tensorboard-rs = "0.5.9"
